datahub/datahub-gms-http-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: datahub-gms
  namespace: datahub
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: contour
    namespace: projectcontour
  hostnames:
  - "datahub-gms.ganesh.algueron.io"
  rules:
  - backendRefs:
    - kind: Service
      name: datahub-datahub-gms
      port: 8080
