datahub/datahub-http-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: datahub
  namespace: datahub
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: contour
    namespace: projectcontour
  hostnames:
  - "datahub.ganesh.algueron.io"
  rules:
  - backendRefs:
    - kind: Service
      name: datahub-datahub-frontend
      port: 9002
